Sequences endpoints - senders (#8149)
