# packages/server/customer-os-postgres-repository/repository/tenant_settings_mailbox_repository.go
@@ -2,9 +2,11 @@ package repository
 
 import (
 	"context"
+	"github.com/openline-ai/openline-customer-os/packages/server/customer-os-common-module/constants"
 	"github.com/openline-ai/openline-customer-os/packages/server/customer-os-common-module/tracing"
 	"github.com/openline-ai/openline-customer-os/packages/server/customer-os-postgres-repository/entity"
 	"github.com/opentracing/opentracing-go"
+	tracingLog "github.com/opentracing/opentracing-go/log"
 	"gorm.io/gorm"
 )
 
@@ -13,18 +15,20 @@ type tenantSettingsMailboxRepository struct {
 }
 
 type TenantSettingsMailboxRepository interface {
-	GetForTenant(c context.Context, tenant string) ([]*entity.TenantSettingsMailbox, error)
+	Get(c context.Context, tenant string) ([]*entity.TenantSettingsMailbox, error)
+	GetById(c context.Context, tenant, id string) (*entity.TenantSettingsMailbox, error)
 }
 
 func NewTenantSettingsMailboxRepository(db *gorm.DB) TenantSettingsMailboxRepository {
 	return &tenantSettingsMailboxRepository{gormDb: db}
 }
 
-func (r *tenantSettingsMailboxRepository) GetForTenant(c context.Context, tenant string) ([]*entity.TenantSettingsMailbox, error) {
-	span, _ := opentracing.StartSpanFromContext(c, "TenantSettingsMailboxRepository.GetForTenant")
+func (r *tenantSettingsMailboxRepository) Get(c context.Context, tenant string) ([]*entity.TenantSettingsMailbox, error) {
+	span, _ := opentracing.StartSpanFromContext(c, "TenantSettingsMailboxRepository.Get")
 	defer span.Finish()
 
 	span.SetTag(tracing.SpanTagTenant, tenant)
+	span.SetTag(tracing.SpanTagComponent, constants.ComponentPostgresRepository)
 
 	var result []*entity.TenantSettingsMailbox
 	err := r.gormDb.
@@ -41,4 +45,33 @@ func (r *tenantSettingsMailboxRepository) GetForTenant(c context.Context, tenant
 	}
 
 	return result, nil
+}
+
+func (r *tenantSettingsMailboxRepository) GetById(c context.Context, tenant, id string) (*entity.TenantSettingsMailbox, error) {
+	span, _ := opentracing.StartSpanFromContext(c, "TenantSettingsMailboxRepository.GetById")
+	defer span.Finish()
+
+	span.SetTag(tracing.SpanTagTenant, tenant)
+	span.SetTag(tracing.SpanTagComponent, constants.ComponentPostgresRepository)
+
+	span.LogFields(tracingLog.String("id", id))
+
+	var result entity.TenantSettingsMailbox
+	err := r.gormDb.
+		Where("id = ?", id).
+		First(&result).
+		Error
+
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			span.LogFields(tracingLog.Bool("result.found", false))
+			return nil, nil
+		}
+		tracing.TraceErr(span, err)
+		return nil, err
+	}
+
+	span.LogFields(tracingLog.Bool("result.found", true))
+
+	return &result, nil
 }
